--- a/styles.css
+++ b/styles.css
@@ -3,39 +3,42 @@ body {
 }
 #container {
     display: grid;
-    height: 100vh;
+    
     width: 100vw;
     grid-template-rows: 0.75fr 5fr;
+}
+#header {
+    grid-row: 1;
 }
 #body {
     display: grid;
     grid-template-rows: 1fr 5fr;
 }
-#header {
-    grid-row: 1;
-}
 #newBookInputDiv {
     width: 45vw;
-    height: 10vh;
+    height: 20vh;
     border: 2px solid red;
     position: absolute;
     left: 345px;
     z-index: 2;
+    justify-self: center;
 
 }
 
 
 #booksDisplay {
     width: 100%;
-    height: 70vh;
     border: 2px solid blue;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
     grid-auto-flow: row;
+    grid-gap: 5px;
 }
 
 .bookCard {
     border: 2px solid pink;
+    height: 350px;
+    
 }
 .deleteBookBtn {
     height: 2rem;
@@ -50,4 +53,10 @@ body {
 }
 .isHidden {
     display: none;
+}
+
+#showNewBookInputDivBtn {
+    width: 155px;
+    height: 50px;
+    justify-self: center;
 }
