--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,19 @@ body {
     grid-template-rows: 1fr 5fr;
 }
 #newBookInputDiv {
-    width: 45vw;
-    height: 20vh;
+    width: 20vw;
+    height: 32vh;
     border: 2px solid red;
     position: absolute;
-    left: 345px;
+    left: 40vw;
     z-index: 2;
-    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 
+}
+#newBookInputDiv > input, select, button {
+    margin: 10px 10px;
 }
 
 
