--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+:root {
+    --grey: rgb(228, 228, 228);
+}
+
 body {
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 #container {
     display: grid;
@@ -9,41 +13,47 @@ body {
 }
 #header {
     grid-row: 1;
+    
 }
 #body {
     display: grid;
     grid-template-rows: 1fr 5fr;
+    background-color: var(--grey)
 }
 #newBookInputDiv {
     width: 20vw;
     height: 32vh;
-    border: 2px solid red;
     position: absolute;
-    left: 40vw;
-    z-index: 2;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     text-align: center;
-
+    border-radius: 10px;
+    left: 41%;
+    background-color: whitesmoke;
 }
 #newBookInputDiv > input, select, button {
     margin: 10px 10px;
+    
 }
 
 
 #booksDisplay {
     width: 100%;
-    border: 2px solid blue;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
     grid-auto-flow: row;
     grid-gap: 5px;
+    
 }
 
+
 .bookCard {
-    border: 2px solid pink;
     height: 350px;
-    
+    border-radius: 10px;
+    background-color: whitesmoke;
+    margin: 10px;
+    margin-bottom: 30px;
 }
 .deleteBookBtn {
     height: 2rem;
