added hover on deleteBookBtn

--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap');
+
 :root {
     --grey: rgb(228, 228, 228);
 }
 
 body {
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+h1 {
+    font-size: 2.5rem;
+    position: absolute;
+    left: 1rem;
 }
 
 #container {
     display: grid;
-    
     width: 100vw;
     grid-template-rows: 0.6fr 5fr;
 }
 #header {
     grid-row: 1;
+    box-shadow: 2px 2px 2px 1px rgb(176, 176, 176);
+    position: relative;
     
 }
 #body {
@@ -63,10 +72,12 @@ body {
     font-size: 2rem;
 }
 .deleteBookBtn, .readBookBtn {
-    height: 3rem;
-    width: 6rem;
+    height: 4rem;
+    width: 12rem;
     align-self: center;
     border: 1px solid whitesmoke;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.5rem;
 
 }
 
@@ -79,11 +90,9 @@ body {
     height: 70px;
     justify-self: center;
     border: 1px solid var(--grey);
-    
     border-radius: 10px;
     font-size: 1.5rem;
 }
-#showNewBookInputDivBtn:hover {
-    
+#showNewBookInputDivBtn:hover, .deleteBookBtn:hover {
     background-color: rgb(196, 196, 196);;
 }
